--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,32 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.crazyit.activity"
+    package="com.linyongan.activity"
     android:versionCode="1"
     android:versionName="1.0" >
 
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="18" />
+
     <application
         android:icon="@drawable/icon"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:theme="@android:style/Theme.Black.NoTitleBar" >
 
         <!-- 声明作为程序入口的Activity -->
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Black.NoTitleBar" >
+            android:name="com.linyongan.activity.MainActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="org.crazyit.activity.LoanActivity" >
+        <activity android:name="com.linyongan.activity.LoanActivity" >
         </activity>
-        <activity android:name="org.crazyit.activity.InvestmentActivity" >
+        <activity android:name="com.linyongan.activity.InvestmentActivity" >
         </activity>
-        <activity android:name="org.crazyit.activity.IdentificationActivity" >
+        <activity android:name="com.linyongan.activity.IdentificationActivity" >
         </activity>
-        <activity android:name="org.crazyit.activity.FinanceActivity" >
+        <activity android:name="com.linyongan.activity.FinanceActivity" >
         </activity>
-        <activity android:name="org.crazyit.activity.DerivativeActivity" >
+        <activity android:name="com.linyongan.activity.DerivativeActivity" >
+        </activity>
+        <activity android:name="com.linyongan.activity.Button1Activity" >
+        </activity>
+        <activity android:name="com.linyongan.activity.Button2Activity" >
+        </activity>
+        <activity android:name="com.linyongan.activity.Button3Activity" >
+        </activity>
+        <activity android:name="com.linyongan.activity.Button4Activity" >
+        </activity>
+        <activity android:name="com.linyongan.activity.Button5Activity" >
         </activity>
     </application>
 
