--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,7 +33,7 @@
         <activity android:name="com.linyongan.test.IdentificationActivity" >
         </activity>
         <activity android:name="com.linycom.linyongan.test.FinanceActivity" >
-       </activity>
+        </activity>
         <activity android:name="com.linyongan.activity.DerivativeActivity" >
         </activity>
         <activity android:name="com.linyongan.activity.Button1Activity" >
@@ -45,6 +45,12 @@
         <activity android:name="com.linyongan.activity.Button4Activity" >
         </activity>
         <activity android:name="com.linyongan.activity.Button5Activity" >
+        </activity>
+        <activity android:name="com.linyongan.activity.AboutActivity" >
+        </activity>
+        <activity android:name="com.linyongan.activity.LearnActivity" >
+        </activity>
+        <activity android:name="com.linyongan.activity.SearchActivity" >
         </activity>
     </application>
 
