完善期权学堂的ExpandableListActivity

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -47,9 +47,14 @@
             android:theme="@style/AppTheme" >
         </activity>
         <activity android:name="org.achartengine.GraphicalActivity" />
-         <activity android:name="com.linyongan.activity.AboutActivity" >
+        <activity android:name="com.linyongan.activity.AboutActivity" >
         </activity>
-         <activity android:name="com.linyongan.activity.TestActivity" >
+        <activity android:name="com.linyongan.activity.TestActivity" >
+        </activity>
+        <activity
+            android:name="com.linyongan.activity.ViewPagerActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="landscape" >
         </activity>
     </application>
 
