--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,11 +40,13 @@
         </activity>
         <activity android:name="com.linyongan.activity.QuestionActivity" >
         </activity>
-        <activity android:name="com.linyongan.activity.LearnActivity" >
+        <activity
+            android:name="com.linyongan.activity.LearnActivity"
+            android:theme="@style/AppTheme" >
         </activity>
         <activity
             android:name="com.linyongan.activity.SearchActivity"
-            android:theme="@style/AppTheme" >
+            >
         </activity>
         <activity android:name="org.achartengine.GraphicalActivity" />
         <activity android:name="com.linyongan.activity.AboutActivity" >
