--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="7"
         android:targetSdkVersion="18" />
 
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
@@ -57,6 +57,11 @@
             android:name="com.linyongan.activity.ViewPagerActivity"
             android:launchMode="singleTask"
             android:screenOrientation="landscape" >
+        </activity>
+        <activity android:name="com.linyongan.activity.TestPaperActivity" 
+            android:launchMode="singleTask">
+        </activity>
+        <activity android:name="com.linyongan.activity.TesPaperActivity" >
         </activity>
     </application>
 
