--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="7"
+        android:minSdkVersion="8"
         android:targetSdkVersion="18" />
 
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
@@ -42,11 +42,11 @@
         </activity>
         <activity
             android:name="com.linyongan.activity.LearnActivity"
-            android:theme="@style/AppTheme"  >
+            android:theme="@style/AppTheme" >
         </activity>
         <activity
             android:name="com.linyongan.activity.SearchActivity"
-           android:theme="@style/AppTheme"  >
+            android:theme="@style/AppTheme" >
         </activity>
         <activity android:name="org.achartengine.GraphicalActivity" />
         <activity android:name="com.linyongan.activity.AboutActivity" >
@@ -58,10 +58,13 @@
             android:launchMode="singleTask"
             android:screenOrientation="landscape" >
         </activity>
-        <activity android:name="com.linyongan.activity.TestPaperActivity" 
-            android:launchMode="singleTask">
+        <activity android:name="com.linyongan.activity.TestPaperActivity" >
         </activity>
-        <activity android:name="com.linyongan.activity.TesPaperActivity" >
+        <activity android:name="com.linyongan.activity.TestingActivity" >
+        </activity>
+         <activity android:name="com.linyongan.activity.TestCollectActivity" >
+        </activity>
+         <activity android:name="com.linyongan.activity.TestGradeActivity" >
         </activity>
     </application>
 
