完成基础测试所有功能

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//src/com/linyongan/adapter/ExpandableListAdapter.java=UTF-8
+encoding//src/com/linyongan/sql/TestDbManger.java=UTF-8
