--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -38,7 +38,15 @@
         </activity>
         <activity android:name="com.linyongan.activity.Button5Activity" >
         </activity>
+         <activity android:name="com.linyongan.activity.Button6Activity" >
+        </activity>
+        <activity android:name="com.linyongan.activity.Button7Activity" >
+        </activity>
         <activity android:name="com.linyongan.activity.QuestionActivity" >
+        </activity>
+         <activity android:name="com.linyongan.activity.FinanceActivity" >
+        </activity>
+         <activity android:name="com.linyongan.activity.LoanActivity" >
         </activity>
         <activity
             android:name="com.linyongan.activity.LearnActivity"
