--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,14 +19,16 @@
         <!-- 声明作为程序入口的Activity -->
         <activity
             android:name="com.linyongan.activity.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:launchMode="singleTask" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.linyongan.activity.DerivativeActivity" >
+        <activity android:name="com.linyongan.activity.DerivativeActivity"
+             android:launchMode="singleTask" >
         </activity>
         <activity android:name="com.linyongan.activity.Button1Activity" >
         </activity>
@@ -38,15 +40,15 @@
         </activity>
         <activity android:name="com.linyongan.activity.Button5Activity" >
         </activity>
-         <activity android:name="com.linyongan.activity.Button6Activity" >
+        <activity android:name="com.linyongan.activity.Button6Activity" >
         </activity>
         <activity android:name="com.linyongan.activity.Button7Activity" >
         </activity>
         <activity android:name="com.linyongan.activity.QuestionActivity" >
         </activity>
-         <activity android:name="com.linyongan.activity.FinanceActivity" >
+        <activity android:name="com.linyongan.activity.FinanceActivity" >
         </activity>
-         <activity android:name="com.linyongan.activity.LoanActivity" >
+        <activity android:name="com.linyongan.activity.LoanActivity" >
         </activity>
         <activity
             android:name="com.linyongan.activity.LearnActivity"
@@ -66,12 +68,13 @@
             android:launchMode="singleTask"
             android:screenOrientation="landscape" >
         </activity>
-        <activity android:name="com.linyongan.activity.TestingActivity"
-             android:launchMode="singleTask" >
+        <activity
+            android:name="com.linyongan.activity.TestingActivity"
+            android:launchMode="singleTask" >
         </activity>
-         <activity android:name="com.linyongan.activity.TestCollectActivity" >
+        <activity android:name="com.linyongan.activity.TestCollectActivity" >
         </activity>
-         <activity android:name="com.linyongan.activity.TestGradeActivity" >
+        <activity android:name="com.linyongan.activity.TestGradeActivity" >
         </activity>
     </application>
 
